# OOP_labs

lab1/: CMakeLists.txt
lab1/include/: to24.h
lab1/src/: main.cpp  to24.cpp
lab1/tests/: to24_tests.cpp
